Closed Bug 388170 Opened 17 years ago Closed 17 years ago

nsAbLDAPDirectory::Initiate doesn't need to check for if its in a query

Categories

(MailNews Core :: Address Book, defect)

defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: standard8, Assigned: standard8)

Details

Attachments

(1 file)

Attached patch The fixSplinter Review
I was just cleaning up some of my local patches and getting them working again when I found this.

nsAbLDAPDirectory::Initiate no longer needs to check if the directory is from a rdf resource query uri - StartSearch does that for us.

I did consider removing nsAbLDAPDirectory::Initiate altogether, but I don't think that's really a gain.

The header file change is just a small tidy up so that we pull in less files in the compilation.
Attachment #272328 - Flags: superreview?(bienvenu)
Attachment #272328 - Flags: review?(bienvenu)
Attachment #272328 - Flags: superreview?(bienvenu)
Attachment #272328 - Flags: superreview+
Attachment #272328 - Flags: review?(bienvenu)
Attachment #272328 - Flags: review+
Patch checked in -> fixed.
Status: NEW → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
Product: Core → MailNews Core
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: