Bug 388170 nsAbLDAPDirectory::Initiate doesn't need to check for if its in a query. r/sr=bienvenu